--- a/static/styles.css
+++ b/static/styles.css
@@ -35,7 +35,7 @@ h1 {
     background: #fafafa;
 }
 
-.user, .whiskers {
+.user, .hailey {
     margin: 10px 0;
     padding: 10px 15px;
     border-radius: 15px;
@@ -49,7 +49,7 @@ h1 {
     margin-left: auto;
 }
 
-.whiskers {
+.hailey {
     background: #e9ecef;
     color: #333;
     margin-right: auto;
